# final_engineering_project

./: .flake8  .gitignore  README.md  kill-train-background.sh  pyproject.toml  train-background.sh
.github/workflows/: app-server.yml
final_engineering_project/: args.py  conv_tasnet.py  index.py  properties.list  properties.py  utils.py
final_engineering_project/data/: create_data.py  kaggle_dataset.py  main.py  mixure_dataset.py  noise_dataset.py  random_dataset.py
final_engineering_project/download/: kaggle.py  main.py  prepare_reverb_data.sh
final_engineering_project/test/: TestDataset.py  create_sample.py  metric.py  save_sample.py  test.py
final_engineering_project/tool/: run.py
final_engineering_project/train/: OVectorUtility.py  model.py  solver.py  train.py  train_dataset.py
tests/: test_final_engineering_project.py
